Update default theme's templates to use STE instead of Eta

--- a/views/themes/default/components/footer.html
+++ b/views/themes/default/components/footer.html
@@ -1,20 +1,13 @@
 <div class="footer">
 	<div class="pure-g">
 		<div class="pure-u-1">
-			<p class="copyright"><%~ it.footerCopyright %></p>
+			<p class="copyright">{{html_footerCopyright}}</p>
 		</div>
 	</div>
 </div>
 
-<% if (it.build) { %>
-<script src="/static/scripts/search.js"></script>
-<% } %> <%/*
-<!-- Comment added for readability -->
-*/%> <% if (it.mdRoute) { %>
-<script src="/static/vendors/highlight/highlight.min.js"></script>
-<script>
-	hljs.highlightAll()
-</script>
-<% } %>
+{{#if mdRoute}}
+<script src="/static/vendors/highlight/highlight.min.js" onload="hljs.highlightAll()"></script>
+{{/if}}
 
 <script type="module" src="/static/scripts/themes/default/default-scripts.js"></script>
