--- a/views/themes/default/components/head.html
+++ b/views/themes/default/components/head.html
@@ -1,18 +1,18 @@
 <head>
-	<% /* Metadata */ %>
+	<!--Metadata-->
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="<%= it.data.description %>" />
+	<meta name="description" content="{{data.description}}" />
 
-	<% /* Favicon */ %>
-	<link rel="shortcut icon" href="<%= it.data.favicon %>" type="image/svg+xml" />
-	<% /* Title */ %>
-	<title><%= it.siteTitle %> | <%= it.data.title %></title>
+	<!--Favicon-->
+	<link rel="shortcut icon" href="{{data.favicon}}" type="image/svg+xml" />
+	<!--Title-->
+	<title>{{siteTitle}} | {{data.title}}</title>
 
-	<% /* Stylesheets*/ %>
+	<!--Stylesheets-->
 	<link rel="stylesheet" href="/static/vendors/themes/default/purecss/pure-min.min.css" />
 	<link rel="stylesheet" href="/static/styles/themes/default/default-styles.min.css" />
-	<% if (it.mdRoute) { %>
+	{{#if mdRoute}}
 	<link rel="stylesheet" href="/static/vendors/highlight/atom-one-dark.min.css" />
-	<% } %>
+	{{/if}}
 </head>
