--- a/views/themes/default/components/pagination.html
+++ b/views/themes/default/components/pagination.html
@@ -1,11 +1,10 @@
 <link rel="stylesheet" href="/static/styles/themes/default/default-pagination.css" />
-<%/*
 <!-- First page pagination -->
-*/%> <% if (it.firstPage && it.lastPage > 0) { %>
+{{#if firstPage && lastPage > 0}}
 <nav aria-label="pagination">
 	<ul class="pagination">
 		<li>
-			<a href="/page/<%= it.lastPage %>" title="Last page" aria-label="Go to the last page of the blog">
+			<a href="/page/{{lastPage}}" title="Last page" aria-label="Go to the last page of the blog">
 				<span aria-hidden="true">
 					<img src="/static/images/chevron-left.svg" alt="Last page" />
 				</span>
@@ -20,16 +19,16 @@
 		</li>
 	</ul>
 </nav>
-<% } %> <%/*
+{{/if}}
 <!-- Other pages pagination -->
-*/%> <% if (!it.firstPage) { %>
+
+{{#not firstPage}}
 <nav aria-label="pagination">
 	<ul class="pagination">
-		<%/*
 		<!-- Older posts -->
-		*/%> <% if (it.paginatedPostsList.next_page) { %>
+		{{#if paginatedPostsList.next_page}}
 		<li>
-			<a href="/page/<%= it.lastPage %>" title="Last page" aria-label="Go to the last page of the blog">
+			<a href="/page/{{lastPage}}" title="Last page" aria-label="Go to the last page of the blog">
 				<span aria-hidden="true">
 					<img src="/static/images/chevron-left.svg" alt="Last page" />
 				</span>
@@ -40,21 +39,21 @@
 			<a
 				class="btn default prev"
 				role="button"
-				href="/page/<%=it.paginatedPostsList.next_page%>"
+				href="/page/{{paginatedPostsList.next_page}}"
 				aria-label="Go to the previous set of posts"
 			>
 				<span aria-hidden="true">Older Posts</span>
 				<span class="hidden">Go to the previous set of posts</span>
 			</a>
 		</li>
-		<% } %> <%/*
+		{{/if}}
 		<!-- Newer posts -->
-		*/%> <% if (it.paginatedPostsList.prev_page) { %>
+		{{#if paginatedPostsList.prev_page}}
 		<li>
 			<a
 				class="btn default next"
 				role="button"
-				href="/page/<%=it.paginatedPostsList.prev_page%>"
+				href="/page/{{paginatedPostsList.prev_page}}"
 				aria-label="Go to the next set of posts"
 			>
 				<span aria-hidden="true">Newer Posts</span>
@@ -69,7 +68,7 @@
 				<span class="hidden">Go to the first page of the blog</span>
 			</a>
 		</li>
-		<% } else { %>
+		{{#else}}
 		<li>
 			<a class="btn default next" role="button" href="/" aria-label="Go to the next set of posts">
 				<span aria-hidden="true">Newer Posts</span>
@@ -84,7 +83,7 @@
 				<span class="hidden">Go to the first page of the blog</span>
 			</a>
 		</li>
-		<% } %>
+		{{/if}}
 	</ul>
 </nav>
-<% } %>
+{{/not}}
