Fix default theme header to load the featured image if it's defined

--- a/views/themes/default/components/header.html
+++ b/views/themes/default/components/header.html
@@ -1,4 +1,4 @@
-{{#if data.featuredImage != postPreviewFallbackImage}}
+{{#if data.featuredImage && data.featuredImage != postPreviewFallbackImage}}
 <style>
 	.post-header {
 		background-image: url("{{data.featuredImage}}");
