Fix post excerpt rendering in default theme
Avoids an empty paragraph tag at build time.
Excerpt already parsed in `processMarkdownPosts`.

--- a/views/themes/default/layouts/index.html
+++ b/views/themes/default/layouts/index.html
@@ -27,7 +27,7 @@
 			<a href="/posts/{{fileBaseName}}" rel="bookmark">{{frontmatter.title}}</a>
 		</h1>
 		<h2>{{frontmatter.description}}</h2>
-		<p>{{postExcerpt}}</p>
+		{{postExcerpt}}
 		<p class="read-more">
 			<a
 				href="/posts/{{fileBaseName}}"
